@@ -14,6 +14,7 @@ Version 2.6
 - Added lexers:
 
   * Ride (PR#1319, PR#1321)
+  * USD (PR#1290)
 
 - The 256-color/true-color terminal formatters now support the italic attribute
   in styles (PR#1288)
@@ -23,6 +24,7 @@ Version 2.6
 - Boogie/Silver: support line continuations and triggers, move contract keywords
   to separate category (PR#1299)
 - GAS: support C-style comments (PR#1291)
+- Fix names in S lexer (PR#1330)
 
 
 Version 2.5.2
